--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   path_provider: ^2.0.15
   page_transition: ^2.0.2
+  firebase_core: ^2.27.0
+  shared_preferences: ^2.0.8
   flutter:
     sdk: flutter
 
@@ -38,6 +40,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
+  firebase_auth: ^4.17.8
+  cloud_firestore: ^4.15.8
+  firebase_storage: ^11.5.3
+  firebase_app_check: ^0.2.1+17
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
