--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_storage: ^11.5.3
   firebase_app_check: ^0.2.1+17
   image_picker: ^1.0.8
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
