resolve media query

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id 'app_plugin_loader'
 }
 
 apply plugin: 'com.google.gms.google-services'
