--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher_android: ^6.3.2
   url_launcher: ^6.3.0
   google_maps_flutter: ^2.6.1
+  http: ^1.2.1
   
 
 dev_dependencies:
